# longrun-agent-harness

./: CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  failure_mode.md
.github/workflows/: test.yml
docs/: failure-modes.md  migration-guide.md  state-model.md
examples/coding-task/: contract.md  handoff.md  plan.md  qa.md  task.json
src/longrun_harness/: __init__.py  cli.py  validators.py
src/longrun_harness/schemas/: final-delivery-state.schema.json  task-contract.schema.json  visible-receipt.schema.json
tests/: test_cli.py  test_validators.py
