[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "longrun-agent-harness"
version = "0.1.0"
description = "Validation tools for long-running AI agent workflows"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Chao Liu" }]
keywords = ["agents", "automation", "validation", "workflow", "codex"]

[project.scripts]
longrun-harness = "longrun_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
longrun_harness = ["schemas/*.json"]
